--- a/Leetcode75Questions/Leetcode75Questions.csproj
+++ b/Leetcode75Questions/Leetcode75Questions.csproj
@@ -5,6 +5,7 @@
         <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <RootNamespace>Leetcode75</RootNamespace>
     </PropertyGroup>
 
 </Project>
